[tool.poetry]
name = "dojo-actions"
version = "0.1.0"
description = "Contains everything to interact with the DojoCodes API"
authors = ["Sygmei <3835355+Sygmei@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
